# NeuraCalc

./: .gitignore  README.md  exercise.py  neuracalc.py  setup.cfg
src/neuracalc/: exercise.py  neuracalc.py
