[metadata]
name = neuracalc
version = attr:neuracalc.__version__
description = A command line mental math training program
author = David Cerny
author_emain = david@cernyd.com
url = https://github.com/cernyd/NeuraCalc

[options]
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    neuracalc = neuracalc.neuracalc:main
